docs : Update user info docs
